--- a/module/Leads/test/phpunit.xml.dist
+++ b/module/Leads/test/phpunit.xml.dist
@@ -3,7 +3,7 @@
 <phpunit bootstrap="Bootstrap.php">
 	<testsuites>
 		<testsuite name="zf2tutorial">
-			<directory>./AlbumTest</directory>
+			<directory>./LeadsTest</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
