--- a/module/Leads/test/phpunit.xml.dist
+++ b/module/Leads/test/phpunit.xml.dist
@@ -2,7 +2,7 @@
 
 <phpunit bootstrap="Bootstrap.php">
 	<testsuites>
-		<testsuite name="zf2tutorial">
+		<testsuite name="api-endpoints">
 			<directory>./LeadsTest</directory>
 		</testsuite>
 	</testsuites>
