Installed mwGearman module for Gearman.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/ZF2"]
 	path = lib/ZF2
 	url = git://github.com/zendframework/zf2.git
+[submodule "module/MwGearman"]
+	path = module/MwGearman
+	url = git://github.com/mwillbanks/MwGearman.git
