--- a/module/Leads/config/module.config.ini
+++ b/module/Leads/config/module.config.ini
@@ -2,3 +2,6 @@
 ;router.routes.test.type = 'Zend\Mvc\Router\Http\Segment'
 ;router.routes.test.options.route = '/test[/]'
 ;router.routes.test.options.defaults.controller = "Leads/Controller/Leads"
+
+di.instance.mwGearman\Client\Pecl.parameters.servers.0.0 = "localhost"
+di.instance.mwGearman\Worker\Pecl.parameters.servers.0.0 = "localhost"
