Got DI in Controller for logging as well as post-response processing for the background processes working

--- a/config/autoload/global.ini
+++ b/config/autoload/global.ini
@@ -14,3 +14,7 @@ driver_options.1002 = 'SET NAMES \'UTF8''
 factories.Zend\Db\Adapter\Adapter = 'Zend\Db\Adapter\AdapterServiceFactory'
 
 application_domain = 'api.wandisco.com'
+
+[di]
+instance.mwGearman\Worker\Pecl.parameters.servers.0.0 = "localhost"
+instance.mwGearman\Client\Pecl.parameters.servers.0.0 = "localhost"
