--- a/module/BackgroundTasks/config/module.config.ini
+++ b/module/BackgroundTasks/config/module.config.ini
@@ -1,2 +1,4 @@
-di.instance.mwGearman\Worker\Pecl.parameters.servers.0.0 = "localhost"
-di.instance.mwGearman\Client\Pecl.parameters.servers.0.0 = "localhost"
+;di.instance.mwGearman\Worker\Pecl.parameters.servers.0.0 = "localhost"
+;di.instance.mwGearman\Client\Pecl.parameters.servers.0.0 = "localhost"
+[service_manager]
+invokables.backgroundtasks_workers_leads = "BackgroundTasks\Workers\Leads"
