--- a/config/autoload/global.ini
+++ b/config/autoload/global.ini
@@ -13,7 +13,7 @@ driver_options.1002 = 'SET NAMES \'UTF8''
 [service_manager]
 factories.Zend\Db\Adapter\Adapter = 'Zend\Db\Adapter\AdapterServiceFactory'
 
-application_domain = 'api.wandisco.com'
+application_domain = 'api.restapi.com'
 
 [di]
 instance.mwGearman\Worker\Pecl.parameters.servers.0.0 = "localhost"
