--- a/config/autoload/local.ini
+++ b/config/autoload/local.ini
@@ -1,2 +1,2 @@
-application_domain = "api.mmarcus.wdev.wandisco.com"
-log_file_dir = '/tmp/tersus-logs'
+application_domain = "api.eng.restapi.com"
+log_file_dir = '/tmp/restapi-logs'
